<resources>
    <string name="app_name">GreenSnap</string>
    <string name="azaleas">Azaleas</string>
    <string name="azaleas_descripcion">Planta originaria china de la familia de los rododendros, requier riegos cuidadosos y no soporta el agua con cal. Quizá por eso sobrevive tan poco y es uno de los mayores retos de los amantes de las plantas. Es una planta de crecimiento lento, suele florecer de abril a mayo, le gustan las temperaturas frescas y si hace calor necesita riego cada dos dias. Además es necesario unb transplante anual exterio.</string>
    <string name="begonias">Begonias</string>
    <string name="begonias_descripcion">Las begonias son plantas populares por su belleza y diversidad de colores y formas. Sus cuidados son semisombra, sustrato drenante y riego moderado. El cultivo de las begonias no entraña grandes dificultades. Existe más de 2.000 especies y bajo ellas, numerosas variedades. Florecen a principios de verano y acaban su ciclo con las primeras heladas de otoño</string>
    <string name="cactus">Cactus de Navidad</string>
    <string name="cactus_descripcion">Pertenece a la familia de las cactáceas, es una planta originaria de América Central y del Sur. Aunque tiene un aspecto distinto a la mayoria de cactus, lo que más le diferencia son sus flores, que tienen forma de plumas, de ahí su nombre común de plumas de Santa Teresa, además florecen antes que la mayoría de especies. Las flores pueden ser rosas, rojas, blancas, naranjas o amarillas y miden entre 3 y 5 cm de diámetro. Es uno de los catus más duraderos, ya que en maceta tiene una vida de entre 3 y 10 años. Su cultivo es sencillo, aunque tiene en contra que algunos de sus segmentos se pueden estropear sin razón aparante, por lo que hay que prestar atención a sus cuidados y eliminar las partes que se ven mal.</string>
    <string name="calatheas">Calatheas</string>
    <string name="calatheas_descripcion">Es una planta tropical de la famila de las marantas, según la especie la planta adopta tamaños , coleres y formas direfentes en sus hojas. Las hojas nacen enrolladas y después se van abriendo, los tallos crecen en grupos, son perennes y sus hojas tienen una habilidad llamada nioctinasia, en donde las hojas se abren en el día para buscar el sol y se cireran en la noche para reducir la pérdida de agua.</string>
    <string name="crassula">Crassula</string>
    <string name="crassula_descripcion">Pertenece a la familia de las plantas de hojas gruesas (Crassulaceae). También se ubica la subfamilia de Crassuloideae. Este árbol crece hasta una altura máxima de aproximadamente 3 metros. Es de tallo grueso y recto, y tiene muchas ramas. En su base, a menudo está fuertemente ramificada. Es una planta suculenta muy conocida en todas partes y es muy fácil de conseguir, crece con facilidad y es bastante fácil de cuidar.</string>
    <string name="dionaea">Dionaea Muscipula</string>
    <string name="dionaea_descripcion">Llamada Diana atrapamoscas en algunos paises como Sudamérica y mas comúnmente conocida como Venus atrapamoscas, es uno de los tipos de plantas carnívoras más emblemáticos. Se trata de la única especie que conforma el género Dionaea, que tiene su origen en Carolina del Norte. Sus hojas crecen desde un rizoma enterrado, forman una roseta con una longitus que se encuentra comprendida entre los 3cm y los 8cm, que crecen de forma horizontal. En la época de floración en primavera, da lugar a un tallo floral que crece desde el mismo centro de la planta, quw es de hata 20cm de altura y con una llamativa flor blanca de pequeño tamaño en el extremo.</string>
    <string name="echeveria">Echeveria</string>
    <string name="echeveria_descripcion">También llamada rosa de alabastro, en en realidad todo un género de plantas crasas que forma parade de la familia Crassulaceae. Es originaria de México y Brasil, con cerca de 400 especies, muy resistente a las condiciones de sequía y las variaciones térmicas, sus tallos alcanzan alturas de hata 20cm y produce flores rosadas o amarillentas desde invierno a primavera.</string>
    <string name="euphorbia">Euphorbia</string>
    <string name="euphorbia_descripcion">Recibe su nombre común de planta corana de Cristo o planta corona de espinas debido a que existe la leyenda de que esta fue la planta que se utilizó pra la confecicón de su corana de espinas. Es originaria de Madagascar, un arbusto que llega a alcanzar, e incluso superar, alturas de 1 metro y destaca por las brácteas de color rojo o rosado de sus flores que son muy llamativas. Es una planta suculenta muy resistente, que puede llegar a florecer durante todo el año en el clima y condiciones adecuadas.</string>
    <string name="guzmania">Guzmania</string>
    <string name="guzmania_descripcion">Es una de las plantas de interior más bonitas y particulares que podemos encontrar y que resulta muy popular, además de por su belleza, por sus fáciles cuidados. Sus hojas acintadas como su inflorecencia son tremendamente decorativas.</string>
    <string name="claveles">Claveles</string>
    <string name="claveles_descripcion">Son originarios de Eurasia, y she han convertido en símbolo de muchos países mediterráneos por la belleza que tienen. Son hierbas perennes que florecen durante primavera y verano, entre las que se puede encontrar una gran variedad en colores y formas.</string>
    <string name="margaritas">Margaritas</string>
    <string name="margaritas_descripcion">Son una de las plantas más populares del mundo y sus flores tan características. Son tremendamente prolíficas, ye sque existen más de 140 especies distintas.</string>
    <string name="violas">Violas</string>
    <string name="violas_descripcion">También llamadas plantas del pensamiento, son originaria de Europa del norte y acutual cuenta con una enorme cantidad de vairedades, con tipos de colores y tamaños de flor. Necesitan una zona muy luminosa y mantener la tierra húmeda sin encharcar (en floración se riegan cada 2 o 3 dias). Es comestible, florece en otoño y en climás cálidos su floración puede extenderse hasta primavera.</string>
    <string name="azalea_hortinno">Azalea Hortinno</string>
    <string name="azalea_hortinno_noralinde">Azalea Hortinno Noralinde</string>
    <string name="azalea_hortinno_yankadi">Azalea Hortinno Yankadi</string>
    <string name="azalea_piramide">Azalea Piramide</string>
    <string name="begonia_elatior_roja_baladin">Begonia Elatior Roja (Baladin)</string>
    <string name="begonia_elatior_roja_grace">Begonia Elatior Roja (Grace)</string>
    <string name="begonia_elatior_salmon">Begonia Elatior Salmón (Borias)</string>
    <string name="begonia_maculata">Begonia Maculata (Wightii)</string>
    <string name="cactus_navidad">Schlumbergera (Cactus de Navidad)</string>
    <string name="calathea_lancifolia">Calathea Lancifolia</string>
    <string name="calathea_ornata">Calathea Ornata (Sanderiana)</string>
    <string name="calathea_roseopicta">Calathea Roseopicta (Medallion)</string>
    <string name="calathea_zebrina">Calathea Zebrina</string>
    <string name="crassula_ovata">Crassula Ovata (Arbol de Jade)</string>
    <string name="dionaea_muscipula">Dionaea Muscipula (Venus Atrapamoscas)</string>
    <string name="echeveria_pulvinata">Echeveria Pulvinata</string>
    <string name="euphorbia_milii">Euphorbia Milii (Corona de Cristo)</string>
    <string name="guzmania_francesca">Guzmania (Francesca)</string>
    <string name="dianthus_barbatus">Dianthus Barbatus (Clavel del Poeta)</string>
    <string name="dianthus_caryophyllus">Dianthus Caryophyllus (Clavel Común)</string>
    <string name="dimorphotheca_ecklonis">Dimorphoteca Ecklonis (Margarita del Cabo)</string>
    <string name="viola_x_wittrockiana">Viola x Wittrockiana (Planta del Pensamiento)</string>
    <string name="interior">interior</string>
    <string name="exterior">exterior</string>
    <string name="ambos">ambos</string>
    <string name="luz">Iluminacion</string>
    <string name="temperatura">Temperatura</string>
    <string name="sustrato">Sustrato</string>
    <string name="riego">Riego</string>
    <string name="humedad">Humedad</string>
    <string name="abono">Abono</string>
    <string name="poda">Poda</string>
    <string name="enfermedades">Enfermedades</string>
    <string name="transplante">Transplante</string>
    <string name="luz_azalea">Lugares con luz indirecta, especialmente en las horas centrales del día. Un lugar cerca de una ventana orientada hacia el este o el oeste es ideal.</string>
    <string name="temperatura_azalea">Entre 13-15ºC</string>
    <string name="sustrato_azalea">Necesita un sustrato ácido y bien drenado. Puedes mezclar musgo de turba, atena y perlita para asegurar un buen drenaje y rentención de humedad</string>
    <string name="riego_azalea">Mantener el suelo de la maceta húmedo pero no mojado. Regarla cuando la capa superior del sustrato esté seca al tacto con agua no alcalina (se puede filtrar o recoger agua de lluvia). Evitar el encharcamiento y el exceso de agua, ya que puede causar enfermedades y pudirición en la planta. Si hace calor se riega cada 2 días.</string>
    <string name="humedad_azalea">La planta necesita un ambiente con mucha humedad, para ello, puedes colocar la maceta sobre un plato lleno de agua con piedras que evitarán que la maceta toque el agua, o bien pulverizar las hojas con agua destilada</string>
    <string name="abono_azalea">Aplicar un fertilizante específico para plantas acidófilas durante la temporada de crecimiento (primavera-verano) cada 2-4 semanas siguiendo las instrucciones del fabricante para evitar quemar las raices.</string>
    <string name="poda_azalea">Utiliza herramientas lismpias y bien afiladas para evitar desgarros en las ramas y propagación de enfermedades. Realiza los cortes justo por encima de un brote o yema, en un ángulo de 45 grados. Retirar cualquier rama muerta, enferma o dañada, así como aquellas que estén entrelazadas en el centro de la planta permitiendo así mejora la circulación del aire y la entrada de luz. Requiere un periodo de descanso para volver a florecer, por lo que deberá colocarla en un lugar fresco (13-15ºC) durante 6-8 semanas evitando las corrientes de aire frio y los cambios bruscos de temperatura.</string>
    <string name="enfermedades_azalea">Suele ser susceptible a plags como pulgones, ácaros y cochinillas, así como enfermedades fúngicas. Inspecciona regularmente tu planta y trata cualquier infestación o enfermedad con los productos adecuados.</string>
    <string name="trasplante_azalea">Es necesario un transplante anual en exterior. Durante el verano en sitio sombrio a principios de junio hacemos un agujero lo bastante grande para que qupa la planta con su maceta (sí maceta incluida) controlando aún mas los riegos y la humedad. A principios de Septiembre se desentierra y si vemos que las raices sobresalen por debajo, cambiamos a una maceta más grande con mucho cuidado.</string>
    <string name="luz_begonia">Colocarla cerca de una ventana. Evitar exponerla directamente al sol ya que puede quemar sus hojas.</string>
    <string name="temperatura_begonia">Requiere una temperatura cálida y estable (18-24ºC). Evitar corrientes de aire fío y fuentes de calor intenso como radiadores.</string>
    <string name="sustrato_begonia">Utiliza un sustrato bien drenado y rico en  materia orgánica. Puedes mezclar tierra para macetas con turba o perlita para mejorar la textura y el drenaje.</string>
    <string name="riego_begonia">No tolera el agua estancada. Permite que la capa superior del suelo se seque antes de volver a regar. Controla la humedad del sustrato y evita exceso de agua.</string>
    <string name="user">Usuario o correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="viewPass">Mostrar contraseña</string>
    <string name="save">Guadar sesión</string>
    <string name="login">Iniciar sesión</string>
</resources>